--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
           NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
-
+          NEXT_PUBLIC_ACCESS_CODE: ${{secrets.NEXT_PUBLIC_ACCESS_CODE}}
       - name: Add .nojekyll
         run: touch out/.nojekyll
 
